# Langgraph_Learning

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
1-BasicChatbot/: 1-basicchatbot.ipynb
1-multichatbot/: Simple_Hierarchical_Multi-Agent_System.ipynb  planner_critic_memory_agent.py  simpleaagentarchitecture.ipynb  supervised_multiaiagents.ipynb
1-tool-integration/: email_utils.py  fetch_email_tool.py  notion_tool.py  send_email_tool.py  send_email_with_langsmith.py  whatsapp_tool.py
1.tool_integration/: fetch_email_tool.py  send_email_tool.py  send_email_with_langsmith.py.py
LangChain-GoogleDocs/: google_drive_loader.py  requirements1.txt
my_mcp/: tool_client.py  tool_host.py
tests/: conftest.py  test_email_utils.py  test_fetch_email_tool.py  test_mcp_tools.py  test_notion_tool.py  test_planner_critic_memory_agent.py  test_webapp.py  test_whatsapp_tool.py
webapp/: app.py
webapp/static/: style.css
webapp/templates/: index.html
